<resources>
    <string name="app_name">StreamEasy</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="stream_destination_header">Stream Destination</string>
    <string name="stream_quality_header">Stream Quality</string>
    <string name="notifications_header">Notifications</string>

    <!-- Essential Preferences -->
    <string name="destination_title">Stream destination URL</string>

    <!-- Stream Quality Preferences -->
    <string name="resolution_title">Resolution</string>
    <string name="bitrate_title">Bitrate</string>

    <!-- Background Preferences -->
    <string name="background_title">Stream in background when minimized</string>
    <string name="push_title">Enable push notifications</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>