<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/stream_destination_header">

        <EditTextPreference
            app:key="destination"
            app:title="@string/destination_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/stream_quality_header">

        <SwitchPreference
            android:defaultValue="false"
            android:key="auto"
            android:title="Switch preference" />
        <ListPreference
            android:defaultValue="1080"
            android:entries="@array/resolution_entries"
            android:entryValues="@array/resolution_values"
            android:key="list_preference_1"
            android:title="@string/resolution_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/bitrate_entries"
            android:entryValues="@array/bitrate_values"
            android:key="bitrate"
            android:title="@string/bitrate_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="Default value"
            android:key="custom_bitrate"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Edit text preference"
            app:dependency="bitrate" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notifications_header">

        <SwitchPreference
            android:defaultValue="false"
            android:key="background"
            android:title="@string/background_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="push"
            android:title="@string/push_title"
            app:dependency="background" />
    </PreferenceCategory>

</PreferenceScreen>